modify: 修改查詢指令的錯誤處理